# Procast-Agent

./: .envrc  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
docs/: AGENT_DEMO_RESULTS.md  BACKEND_API_UPGRADE_SPEC.md  BACKEND_NDJSON_SPEC.md  CHAT_API_PROTOCOL.md  DATABASE_SCHEMA.md  ERD.md
notebooks/: test_agent.ipynb
scripts/: setup_db.sh  test_agent_workflow.py  test_rls_scope.py
src/agent/: __init__.py  graph.py  nodes.py  routing.py  state.py
src/api/: __init__.py  main.py  schemas.py  streaming.py
src/api/middleware/: __init__.py  auth.py
src/api/routes/: __init__.py  analyze.py  chat.py  schema.py  sessions.py  stream.py
src/core/: __init__.py  config.py  retry.py
src/db/: __init__.py  connection.py  schema_registry.py
src/dspy_modules/: __init__.py  analyzer.py  classifier.py  compile.py  config.py  metrics.py  signatures.py  sql_generator.py  table_selector.py
src/dspy_optimization/: __init__.py  compile.py  with_examples.py
src/dspy_optimization/training/: analysis_examples.json  sql_examples.json
src/eval/: __init__.py  validator.py
src/mcp/: __init__.py  server.py  tools.py
src/sessions/: __init__.py  db.py  models.py  repo.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_dspy_modules.py  test_mcp.py  test_rls_scope.py  test_sessions.py
ui/: README.md  app.py  chainlit.md  requirements.txt  run.sh
